#
# Copyright (c) 2018, Juniper Networks, Inc.
# All rights reserved.
#

AC_INIT([protoc-wedge], [1.0], [srikanth2212@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign -Wno-portability])

AC_PROG_CC
AC_PROG_CXX
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_FILES([src/Makefile
		 Makefile])

AC_OUTPUT

